# worms-mythos

./: .gitignore  README.md  pyproject.toml  requirements.txt
bench/: bench_frame.py  bench_sim.py
grubstorm/: __init__.py  ai.py  app.py  audio.py  bodies.py  chunks.py  constants.py  crt.py  game.py  grub.py  icons.py  mapgen.py  materials.py  music.py  net.py  particles.py  pixelfont.py  relay.py  render.py  sandbox.py  ui.py  weapons.py  world.py
server/: relay.py
tests/: README.md  _harness.py  run_all.py  test_battery.py  test_determinism.py  test_render_exact.py  test_sim_behavior.py  test_snapshot.py
