[project]
name = "grubstorm"
version = "0.1.0"
description = "Worms World Party x Noita: a turn-based artillery party game where every pixel is simulated"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Alex Galkin" }]
keywords = ["game", "artillery", "falling-sand", "worms", "noita", "pygame"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
]
dependencies = [
    "pygame-ce>=2.4",
    "numpy>=1.24",
    "tinysoundfont>=0.3",
]

# tinysoundfont declares pyaudio (live-audio IO) as a hard dependency, but we
# only use its offline renderer. pyaudio has no Linux wheels and would break
# installation, so it is overridden away.

[project.urls]
Repository = "https://github.com/alexgalkin94/worms-mythos"

[project.scripts]
grubstorm = "grubstorm.app:main"
grubstorm-server = "grubstorm.relay:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
override-dependencies = ["pyaudio; python_version < '3'"]

[tool.uv.build-backend]
module-name = "grubstorm"
module-root = ""
